[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ibrovix-validator"
version = "1.0.0"
description = "High-performance proxy validation and filtering tool for V2Ray, SSH, and Trojan protocols"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "IBROVIX" },
]
requires-python = ">=3.9"

keywords = ["v2ray", "proxy", "validator", "vmess", "vless", "trojan", "ssh"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: System :: Networking :: Monitoring",
]

[project.urls]
Homepage = "https://github.com/IBROVIX1/ibrovix-validator"
Repository = "https://github.com/IBROVIX1/ibrovix-validator"
"Bug Tracker" = "https://github.com/IBROVIX1/ibrovix-validator/issues"

[project.optional-dependencies]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0", "pytest-cov>=4.0.0"]
geo = ["aiohttp>=3.9.0"]
harvester = ["httpx>=0.25.0"]

[project.scripts]
ibrovix-validator = "ibrovix_validator.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }
packages = { find = { where = ["src"] } }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
